# Basic-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Shaders/: compile_shaders.bat  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/Engine/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Entity.cpp  Entity.h  FrameInfo.h  GameObject.cpp  GameObject.h  InputMovementController.cpp  InputMovementController.h  KeyboardMovementController.cpp  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Utils.h  Window.cpp  Window.h
src/Engine/Components/: BaseComponent.h
src/Systems/: PointLightSystem.cpp  PointLightSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
